# Pet_project_issue_service

.github/workflows/: docker-image.yml
project_backend/: README.md  docker-compose.yml  rest.yaml  setup.cfg
project_backend/book_service/: setup.cfg
project_backend/book_service/adapters/books_api/: app.py  auth.py  controllers.py
project_backend/book_service/adapters/database/: mapping.py  repositories.py  settings.py  tables.py
project_backend/book_service/adapters/message_bus/: __init__.py  scheme.py  settings.py
project_backend/book_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
project_backend/book_service/composites/: app_api.py
project_backend/book_service/tests/: conftest.py  tests.py
project_backend/issues_service/: Dockerfile  run.py
project_backend/issues_service/adapters/database/: mapping.py  repositories.py  settings.py  tables.py
project_backend/issues_service/adapters/issues_api/: app.py  controllers.py
project_backend/issues_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
project_backend/issues_service/composites/: app_api.py
project_backend/issues_service/tests/: conftest.py  tests.py
project_backend/nginx/: nginx.conf
project_backend/postgres/: init.sql
project_backend/user_service/: Dockerfile  __init__.py  run.py
project_backend/user_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
project_backend/user_service/composites/: app_api.py
project_backend/user_service/tests/: conftest.py  tests.py
(+11 files in other folders)
