[metadata]
name = demo-project
version = 1.0.0
description = Демо проект, построенный по чистой архитектуре
author = Kerim Shaydullin
author_email = Kerim.Shaydullin@evraz.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.9

install_requires =
    attrs
    PyJWT
    pydantic~=1.8.2
    sqlalchemy
    alembic
    hupper
    gunicorn
    waitress
    click
    python-json-logger
    classic-components
    classic-aspects
    classic-app-layer
    classic-http-api
    classic-http-auth
    classic-sql-storage
    classic-messaging
    classic-messaging-kombu
    pytest
    psycopg2-binary

;pip install -e ".[dev]"  #library installation